--- a/platformio.ini
+++ b/platformio.ini
@@ -17,6 +17,7 @@ framework = arduino, espidf
 monitor_speed = 115200
 lib_ldf_mode = deep+
 lib_deps = 
-    olikraus/U8g2 @ ^2.35.19
+    ; olikraus/U8g2 @ ^2.35.19
+    file://./lib
     adafruit/Adafruit SHT4x Library@^1.0.5
     adafruit/Adafruit NeoPixel @ ^1.12.3
